#init : fontawesome과 google font 추가

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
   <title>Kyungho's Portfolio</title>
   <meta name="description" content="Portfolio for Kyungho">
   <meta name="author" content="Kyungho">
-
+  <!-- font awesome 추가 -->
+  <script src="https://kit.fontawesome.com/b87c2b9956.js" crossorigin="anonymous"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
