--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+  <script src="main.js" defer></script>
+  <!-- defer 옵션은 html이 파싱되는 동안 파싱이 다 완료된 뒤에 js 파일을 실행하도록 하는 것 -->
 </head>
 <body>
 
