--- a/index.html
+++ b/index.html
@@ -16,6 +16,34 @@
   <!-- defer 옵션은 html이 파싱되는 동안 파싱이 다 완료된 뒤에 js 파일을 실행하도록 하는 것 -->
 </head>
 <body>
+  <!-- Nav bar -->
+  <nav id="navbar">
+    <div class="navbar__logo">
+      <i class="fab fa-diaspora"></i>
+      <a href="#">Kyungho</a>
+    </div>
+    <div class="navbar__menu">
+      <!-- ul.navbar__menu>li.navbar__menu__item*6 -->
+      <ul class="navbar__menu">
+        <li class="navbar__menu__item"></li>
+        <li class="navbar__menu__item"></li>
+        <li class="navbar__menu__item"></li>
+        <li class="navbar__menu__item"></li>
+        <li class="navbar__menu__item"></li>
+        <li class="navbar__menu__item"></li>
+      </ul>
+    </div>
+  </nav>
+  <!-- About -->
+  <section id="about"></section>
+  <!-- Skills -->
+  <section id="skills"></section>
+  <!-- Work -->
+  <section id="work"></section>
+  <!-- Testimonials -->
+  <section id="testimonials"></section>
+  <!-- Contact -->
+  <section id="contact"></section>
 
 </body>
 </html>
