#style : 사진, 설명 내용, 버튼이 들어간 Home 박스 추가

--- a/index.html
+++ b/index.html
@@ -34,8 +34,23 @@
       </ul>
     </div>
   </nav>
+
+  <!-- Home -->
+  <section id="home">
+    <!-- 사진 하나, Title 하나, 설명하는 부분 하나, Contact me 버튼 하나 -->
+    <img
+      src=""
+      alt="Kyungho's profile photo"
+      class="home__avatar"
+    />
+    <h1 class="home__title">Hello, <br />I'm Kyungho</h1>
+    <h2 class="home__description"></h2>
+    <button class="home__contact">Contact me</button>
+  </section>
+
   <!-- About -->
-  <section id="about"></section>
+  <section id="about">
+  </section>
   <!-- Skills -->
   <section id="skills"></section>
   <!-- Work -->
