#style : About 추가

--- a/index.html
+++ b/index.html
@@ -50,6 +50,64 @@
 
   <!-- About -->
   <section id="about">
+    <h1>About me</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+      Velit unde sapiente doloremque odio laboriosam perferendis possimus
+      consequatur tenetur quo assumenda omnis cumque rem praesentium,
+      ad sequi hic ducimus doloribus vero.
+    </p>
+    <div class="about__majors">
+      <div class="major">
+        <div class="major__icon">
+          <i class="fab fab-html5"></i>
+        </div>
+        <div class="major__title">Front-end</div>
+        <div class="major__description">
+          HTML, CSS, JavaScript, TypeScript,
+          <br />React, Vue, Web APIs
+        </div>
+      </div>
+      <div class="major">
+        <div class="major__icon">
+          <i class="fab fab-html5"></i>
+        </div>
+        <div class="major__title">Front-end</div>
+        <div class="major__description">
+          HTML, CSS, JavaScript, TypeScript,
+          <br />React, Vue, Web APIs
+        </div>
+      </div>
+      <div class="major">
+        <div class="major__icon">
+          <i class="fab fab-html5"></i>
+        </div>
+        <div class="major__title">Front-end</div>
+        <div class="major__description">
+          HTML, CSS, JavaScript, TypeScript,
+          <br />React, Vue, Web APIs
+        </div>
+      </div>
+    </div>
+    <div class="about__jobs">
+      <div class="job">
+        <img src="" alt="" class="job_logo">
+        <p class="job__name">
+
+        </p>
+        <p class="job__period">
+
+        </p>
+      </div>
+      <div class="job">
+        <img src="" alt="" class="job_logo">
+        <p class="job__name">
+
+        </p>
+        <p class="job__period">
+
+        </p>
+      </div>
+    </div>
   </section>
   <!-- Skills -->
   <section id="skills"></section>
