--- a/index.html
+++ b/index.html
@@ -222,7 +222,43 @@
     </div>
   </section>
   <!-- Work -->
-  <section id="work"></section>
+  <section id="work">
+    <h1>My Work</h1>
+    <h3>Projects</h3>
+    <div class="work__categories">
+      <button class="category__btn">
+        All
+        <span class="category__count">
+          8
+        </span>
+      </button>
+      <button class="category__btn">
+        Front-end
+        <span class="category__count">
+          5
+        </span>
+      </button>
+      <button class="category__btn">
+        Mobile
+        <span class="category__count">
+          3
+        </span>
+      </button>
+    </div>
+
+    <div class="work__projects">
+      <a
+        href="#"
+        class="project"
+        target="_blank">
+        <img class="project__img" src="" alt="">
+        <div class="project__description">
+          <h3>프로젝트 명</h3>
+          <span>프로젝트 설명</span>
+        </div>
+      </a>
+    </div>
+  </section>
   <!-- Testimonials -->
   <section id="testimonials"></section>
   <!-- Contact -->
