#html : testimonials 추가

--- a/index.html
+++ b/index.html
@@ -260,7 +260,30 @@
     </div>
   </section>
   <!-- Testimonials -->
-  <section id="testimonials"></section>
+  <section id="testimonials">
+    <h1>Testimonials</h1>
+    <h3>See what they say about me</h3>
+    <div class="testimonials">
+      <div class="testimonial">
+        <img src="" alt="" class="testimonial__avatar">
+        <div class="testimonal__speech-bubble">
+          <p>lorem ipsum...</p>
+          <p class="name">
+            <a href="">Kyungho</a> / Samsung
+          </p>
+        </div>
+      </div>
+      <div class="testimonial">
+        <img src="" alt="" class="testimonial__avatar">
+        <div class="testimonal__speech-bubble">
+          <p>lorem ipsum...</p>
+          <p class="name">
+            <a href="">Kyungho</a> / Samsung
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
   <!-- Contact -->
   <section id="contact"></section>
 
