--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
     <div class="navbar__menu">
       <!-- ul.navbar__menu>li.navbar__menu__item*6 -->
       <ul class="navbar__menu">
-        <li class="navbar__menu__item"></li>
-        <li class="navbar__menu__item"></li>
-        <li class="navbar__menu__item"></li>
-        <li class="navbar__menu__item"></li>
-        <li class="navbar__menu__item"></li>
-        <li class="navbar__menu__item"></li>
+        <li class="navbar__menu__item active">Home</li>
+        <li class="navbar__menu__item">About</li>
+        <li class="navbar__menu__item">Skills</li>
+        <li class="navbar__menu__item">My work</li>
+        <li class="navbar__menu__item">Testimonial</li>
+        <li class="navbar__menu__item">Contact</li>
       </ul>
     </div>
   </nav>
