--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </section>
 
   <!-- About -->
-  <section id="about">
+  <section id="about" class="section">
     <h1>About me</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
       Velit unde sapiente doloremque odio laboriosam perferendis possimus
@@ -61,7 +61,7 @@
         <div class="major__icon">
           <i class="fab fab-html5"></i>
         </div>
-        <div class="major__title">Front-end</div>
+        <h2 class="major__title">Front-end</h2>
         <div class="major__description">
           HTML, CSS, JavaScript, TypeScript,
           <br />React, Vue, Web APIs
@@ -71,7 +71,7 @@
         <div class="major__icon">
           <i class="fab fab-html5"></i>
         </div>
-        <div class="major__title">Front-end</div>
+        <h2 class="major__title">Front-end</h2>
         <div class="major__description">
           HTML, CSS, JavaScript, TypeScript,
           <br />React, Vue, Web APIs
@@ -81,7 +81,7 @@
         <div class="major__icon">
           <i class="fab fab-html5"></i>
         </div>
-        <div class="major__title">Front-end</div>
+        <h2 class="major__title">Front-end</h2>
         <div class="major__description">
           HTML, CSS, JavaScript, TypeScript,
           <br />React, Vue, Web APIs
@@ -91,26 +91,30 @@
     <div class="about__jobs">
       <div class="job">
         <img src="" alt="" class="job_logo">
-        <p class="job__name">
+        <div class="job__description">
+          <p class="job__name">
 
-        </p>
-        <p class="job__period">
+          </p>
+          <p class="job__period">
 
-        </p>
+          </p>
+        </div>
       </div>
       <div class="job">
         <img src="" alt="" class="job_logo">
-        <p class="job__name">
+        <div class="job__description">
+          <p class="job__name">
 
-        </p>
-        <p class="job__period">
+          </p>
+          <p class="job__period">
 
-        </p>
+          </p>
+        </div>
       </div>
     </div>
   </section>
   <!-- Skills -->
-  <section id="skills">
+  <section id="skills" class="section">
     <h1>Skills</h1>
     <h2>Skills & Attrubites</h2>
     <p>
@@ -222,7 +226,7 @@
     </div>
   </section>
   <!-- Work -->
-  <section id="work">
+  <section id="work" class="section">
     <h1>My Work</h1>
     <h3>Projects</h3>
     <div class="work__categories">
@@ -260,7 +264,7 @@
     </div>
   </section>
   <!-- Testimonials -->
-  <section id="testimonials">
+  <section id="testimonials" class="section">
     <h1>Testimonials</h1>
     <h3>See what they say about me</h3>
     <div class="testimonials">
@@ -285,7 +289,7 @@
     </div>
   </section>
   <!-- Contact -->
-  <section id="contact">
+  <section id="contact" class="section">
     <h1 class="contact__title">
       Let's talk
     </h1>
