--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </section>
 
   <!-- About -->
-  <section id="about" class="section">
+  <section id="about" class="section section__container">
     <h1>About me</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
       Velit unde sapiente doloremque odio laboriosam perferendis possimus
@@ -115,112 +115,114 @@
   </section>
   <!-- Skills -->
   <section id="skills" class="section">
-    <h1>Skills</h1>
-    <h2>Skills & Attrubites</h2>
-    <p>
-      about skills~~
-    </p>
-    <div class="skillset">
-      <div class="skillset__left">
-        <h3 class="skillset__title">
-          Skills
-        </h3>
-        <div class="skill">
-          <div class="skill_description">
+    <div class="section__container">
+      <h1>Skills</h1>
+      <h2>Skills & Attrubites</h2>
+      <p>
+        about skills~~
+      </p>
+      <div class="skillset">
+        <div class="skillset__left">
+          <h3 class="skillset__title">
+            Skills
+          </h3>
+          <div class="skill">
+            <div class="skill__description">
                         <span>
                             HTML
                         </span>
-            <span>
+              <span>
                             99%
                         </span>
-          </div>
-          <div class="skill__bar">
-            <div class="skill__value">
+            </div>
+            <div class="skill__bar">
+              <div class="skill__value" style="width: 99%;">
 
+              </div>
             </div>
           </div>
-        </div>
-        <div class="skill">
-          <div class="skill_description">
+          <div class="skill">
+            <div class="skill__description">
+                        <span>
+                            HTML
+                        </span>
+              <span>
+                            90%
+                        </span>
+            </div>
+            <div class="skill__bar">
+              <div class="skill__value" style="width: 90%;">
+
+              </div>
+            </div>
+          </div><div class="skill">
+          <div class="skill__description">
                         <span>
                             HTML
                         </span>
             <span>
-                            99%
+                            70%
                         </span>
           </div>
           <div class="skill__bar">
-            <div class="skill__value">
+            <div class="skill__value" style="width: 70%;">
 
             </div>
           </div>
         </div><div class="skill">
-        <div class="skill_description">
+          <div class="skill__description">
                         <span>
                             HTML
                         </span>
-          <span>
-                            99%
+            <span>
+                            40%
                         </span>
-        </div>
-        <div class="skill__bar">
-          <div class="skill__value">
-
           </div>
-        </div>
-      </div><div class="skill">
-        <div class="skill_description">
+          <div class="skill__bar">
+            <div class="skill__value" style="width: 40%;">
+
+            </div>
+          </div>
+        </div><div class="skill">
+          <div class="skill__description">
                         <span>
                             HTML
                         </span>
-          <span>
-                            99%
+            <span>
+                            55%
                         </span>
-        </div>
-        <div class="skill__bar">
-          <div class="skill__value">
+          </div>
+          <div class="skill__bar">
+            <div class="skill__value" style="width: 55%;">
 
+            </div>
           </div>
         </div>
-      </div><div class="skill">
-        <div class="skill_description">
-                        <span>
-                            HTML
-                        </span>
-          <span>
-                            99%
-                        </span>
         </div>
-        <div class="skill__bar">
-          <div class="skill__value">
-
+        <div class="skillset__right">
+          <div class="tools">
+            <h3 class="skillset__title">
+              Tools
+            </h3>
+            <ul class="tools__list">
+              <!-- (li>span)*5 -->
+              <li><span>Visual Studio Code</span></li>
+              <li><span>IntelliJ</span></li>
+              <li><span>Sublime</span></li>
+              <li><span>POSTMAN</span></li>
+              <li><span>SourceTree</span></li>
+            </ul>
           </div>
-        </div>
-      </div>
-      </div>
-      <div class="skillset__right">
-        <div class="tools">
-          <h3 class="skillset__title">
-            Tools
-          </h3>
-          <ul class="tools__list">
-            <!-- (li>span)*5 -->
-            <li><span>Visual Studio Code</span></li>
-            <li><span>IntelliJ</span></li>
-            <li><span>Sublime</span></li>
-            <li><span>POSTMAN</span></li>
-            <li><span>SourceTree</span></li>
-          </ul>
-        </div>
-        <div class="etc">
-          <h3 class="skillset__title">
-            Etc
-          </h3>
-          <ul class="Etc__list">
-            <li><span>Git</span></li>
-            <li><span>abc</span></li>
-            <li><span>abc</span></li>
-          </ul>
+          <div class="etc">
+            <h3 class="skillset__title">
+              Etc
+            </h3>
+            <ul class="Etc__list">
+              <li><span>Git</span></li>
+              <li><span>abc</span></li>
+              <li><span>abc</span></li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
